<resources>
    <string name="app_name">EventCalendar</string>

    <string name="coming_event_title">Coming</string>
    <string name="visited_event_title">Visited</string>
    <string name="missed_event_title">Missed</string>
    <string name="create_event_button">Add new event</string>

    <string name="temperature">%1$.2f°C</string>

    <string name="event_name_hint">Event Name</string>
    <string name="event_date_hint">Event Date</string>
    <string name="event_city_hint">Choose City</string>
    <string name="event_address_hint">Address Line</string>
    <string name="event_description_hint">Event Description</string>

    // top bar
    <string name="event_list_title">Event List</string>
    <string name="event_create_title">Create Event</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    // toasts
    <string name="incorrect_input">Incorrect input</string>
</resources>