<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/event_name_input"
        android:inputType="text"
        android:hint="@string/event_name_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/event_date_button"
        android:focusable="false"
        android:text="@string/event_date_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_name_input"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/event_city_search_view"
        android:hint="@string/event_city_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:iconifiedByDefault="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_date_button"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.appcompat.widget.SearchView>

    <EditText
        android:id="@+id/event_address_input"
        android:inputType="text"
        android:hint="@string/event_address_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_city_search_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/event_description_input"
        android:inputType="textMultiLine"
        android:hint="@string/event_description_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_address_input"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>